# mlir-tutorial

./: .gitignore  README.md
chapter1/test-dialect/: .gitignore  CMakeLists.txt  README.md
chapter1/test-dialect/include/MyDialect/: CMakeLists.txt  MyDialectOps.h
chapter1/test-dialect/lib/MyDialect/: CMakeLists.txt  MyDialectDialect.cpp  MyDialectOps.cpp
chapter2/my-dialect-lowering/: CMakeLists.txt  README.md  test.mlir
chapter2/my-dialect-lowering/include/MyDialect/: CMakeLists.txt  MyDialectDialect.h  MyDialectDialect.td  MyDialectOps.td  MyDialectPasses.h  MyDialectPasses.td
chapter2/my-dialect-lowering/lib/: CMakeLists.txt
chapter2/my-dialect-lowering/lib/MyDialect/: CMakeLists.txt  MyDialectDialect.cpp  MyDialectPasses.cpp
chapter2/my-dialect-lowering/tools/: CMakeLists.txt
chapter2/my-dialect-lowering/tools/my-dialect-opt/: CMakeLists.txt  my-dialect-opt.cpp
mlirdialectgen/: README.md  pyproject.toml
mlirdialectgen/src/mlirdialectgen/: __init__.py  __main__.py  cli.py
mlirdialectgen/src/mlirdialectgen/templates/: dialect_cpp.jinja  dialect_h.jinja  dialect_td.jinja  include.jinja  include_dialect.jinja  lib_dialect.jinja  ops_cpp.jinja  ops_h.jinja  ops_td.jinja  readme.jinja  root.jinja
